2010-09-29  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/openvassd.8.in: Fixed typos as suggested by Trent W. Buck.

2010-09-05 Thomas Reinke <reinke@securityspace.com>

	* Removed FIXME comment.  Rational: The preferences,
	despite being static, cannot be overwritten by another
	client beginning another scan, because each client is
	handled by a separate, forked, task, each with its
	own copy of memory.

2010-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* MANIFEST: Updated.

2010-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING: New. A summary of the licenses for each file.

2010-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* COPYING.GPLv2: New. Former COPYING.

	* COPYING: Removed. Renamed to COPYING.GPLv2.

2010-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* cnvts/synscan/synscan.c: Added missing header with license
	and copyright. This file originates from the -plugins module
	and includes GPLv2 headers. It was and is linking GPLed nasl.
	So, the conservative assumption is GPLv2 (without the "or any
	later version" clause).

2010-08-12  Michael Meyer <michael.meyer@greenbone.net>

	* tools/openvas-mkcert-client.in:
	Bugfix (line 461: [: too many arguments).

2010-08-04  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* tools/README, tools/README_TOOLS: Moved, such that doxygen will
	include the correct README in the main page.

	* MANIFEST: Updated entry.

2010-07-26  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* openvassd/preferences.c: Resolved K&R function declarations.
	(preferences_get_string): Minor doc added.

2010-07-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.1.1.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Increased PROJECT_NUMBER accordingly.

2010-07-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.1.0 release.

	* VERSION: Set to 3.1.0.
